fix anchor links bug

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     >
   </head>
-  <body>
+  <body class="body">
     <header id="about" class="header">
       <div class="header__top-bar top-bar">
         <div class="top-bar__container">
@@ -52,7 +52,7 @@
                 <a href="#gallery" class="menu__link after">Галерея</a>
               </li>
               <li class="menu__item">
-                <a href="#subs" class="menu__link after">Про Нас</a>
+                <a href="#subscribe" class="menu__link after">Про Нас</a>
               </li>
               <li class="menu__item">
                 <a href="#events" class="menu__link after">Виставки та події</a>
