--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,319 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>НАМУ - Художній музей</title>
+    <link rel="icon" href="./images/icons/logo.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com"
+    crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./styles/reset.scss">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <div class="container">
+      <header class="header" id="top">
+        <a class="icon icon--burger" href="#menu"></a>
+        <div class="header__top">
+          <a class="header__logo-link" href="https://namu.ua/">
+            <img
+              class="logo"
+              src="./images/icons/logo.svg"
+              alt="Логотип МАНУ"
+            >
+          </a>
+        </div>
+        <div class="header__bottom">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <button class="header__btn">
+            <a class="header__btn-link" href="#address">КВИТКИ</a>
+          </button>
+          <a class="header__events-link" href="#events">ПОДІЇ</a>
+        </div>
+      </header>
+    </div>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__top">
+        <a class="icon icon--close" href="#top"></a>
+        <ul class="menu__list-top">
+          <li class="menu__item">
+            <a class="menu__link" href="#gallery">Галерея</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#socials">Про Нас</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#events">Виставки та події</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#address">Контакти</a>
+          </li>
+        </ul>
+      </div>
+      <div class="menu__work-schedule">
+        <p class="menu__text">Графік роботи</p>
+        <div class="menu__schedule">
+          <ul class="menu__list-bottom">
+            <li class="menu__item-text">
+              <p>
+                <span class="menu__span-desc">12:00 — 20:00</span>середа
+              </p>
+            </li>
+            <li class="menu__item-text">
+              <p>
+                <span class="menu__span-desc">12:00 — 20:00</span>четвер
+              </p>
+            </li>
+            <li class="menu__item-text">
+              <p>
+                <span class="menu__span-desc">12:00 — 20:00</span>п’ятниця
+              </p>
+            </li>
+            <li class="menu__item-text">
+              <p>
+                <span class="menu__span-desc">11:00 — 19:00</span>субота
+              </p>
+            </li>
+            <li class="menu__item-text">
+              <p>
+                <span class="menu__span-desc">11:00 — 19:00</span>неділя
+              </p>
+            </li>
+          </ul>
+          <p class="menu__text-desc">
+            <span class="menu__span-desc">Вихідні: </span>понеділок, вівторок<br>Каса припиняє роботу за 1 годину<br>до закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="section-title">Актуальні події</h2>
+
+          <article class="events__article">
+            <img
+              class="events__picture"
+              src="images/bay.png"
+              alt="мальовнича затока - 'Ялівцевий затишок Канаки'"
+            >
+            <div class="events__desc">
+              <div class="events__desc-item">
+                <span class="events__span">ВИСТАВКА</span>
+                <span class="events__span-date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="events__subtitle events__subtitle--mod">Йду і повертаюсь</h3>
+              <p class="events__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </article>
+
+          <article class="events__article events__article--margin">
+            <img
+              class="events__picture"
+              src="images/girl-and-peacock.png"
+              alt="дівчина споглядає на павліна"
+            >
+            <div class="events__desc">
+              <div class="events__desc-item">
+                <span class="events__span">ВИСТАВКА</span>
+                <span class="events__span-date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="events__subtitle events__subtitle--mod">І спогади і мрії</h3>
+              <p class="events__text">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </div>
+
+        <div class="events__section">
+          <img
+            class="events__picture-bottom"
+            src="images/sunset.png"
+            alt="захід сонця на березі озера, поміж очерету видніє рибальський човен"
+            >
+          <div class="container">
+            <div class="events__bottom">
+              <div class="events__bottom-inner">
+                <span class="events__span">ЛЕКЦІЯ</span>
+                <span class="events__span-date">26/08/2019 - 11:00</span>
+              </div>
+              <h3 class="events__subtitle events__subtitle--align">Відкласицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="section-title">Галерея</h2>
+          <div class="gallery__content" id="content">
+            <span class="gallery__span1 gallery__span" id="slide1"></span>
+            <span class="gallery__span2 gallery__span" id="slide2"></span>
+            <span class="gallery__span3 gallery__span" id="slide3"></span>
+            <span class="gallery__span4 gallery__span" id="slide4"></span>
+            <div class="gallery__slides">
+              <img
+                class="gallery__picture gallery__picture--m"
+                src="./images/woman.png"
+                alt="українська жінка в традиційному одязі часів просвітництва"
+              >
+              <img
+                class="gallery__picture gallery__picture--hidden"
+                src="./images/goose.png"
+                alt="гуси на толоці"
+              >
+              <img
+                class="gallery__picture gallery__picture--l"
+                src="./images/village.png"
+                alt="українське село кінця 18 століття"
+              >
+              <img
+                class="gallery__picture gallery__picture--l-b"
+                src="./images/park.png"
+                alt="сонячний-літній день, люди гуляють в парку"
+              >
+              <img
+                class="gallery__picture gallery__picture--s"
+                src="./images/seaside.png"
+                alt="люди відпочивають на березі моря"
+              >
+            </div>
+            <div class="gallery__nav">
+              <a class="gallery__link1 gallery__link" href="#slide1"></a>
+              <a class="gallery__link2 gallery__link" href="#slide2"></a>
+              <a class="gallery__link3 gallery__link" href="#slide3"></a>
+              <a class="gallery__link4 gallery__link" href="#slide4"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <h2 class="section-title section-title--color">Підписка</h2>
+        <div class="container">
+          <p class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form class="subscribe__form">
+            <input
+              class="subscribe__input"
+              type="email"
+              placeholder="E-mail"
+              autocomplete="off"
+            >
+            <button class="subscribe__button"></button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content" id="socials">
+          <div class="footer__icons">
+            <a class="footer__logo-link" href="https://namu.ua/">
+              <img
+                class="logo"
+                src="./images/icons/logo.svg"
+                alt="Логотип МАНУ"
+              >
+            </a>
+            <div class="footer__socials">
+              <a
+                class="icon icon--facebook"
+                href="https://www.facebook.com/namu.museum/"
+                target="_blank">
+              </a>
+              <a
+                class="icon icon--instagram"
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank">
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__contact-info" >
+            <div class="footer__work-schedule">
+              <p class="footer__text">Графік роботи</p>
+              <ul class="footer__list-schedule">
+                <li class="footer__item">
+                  <span class="footer__span-desc">12:00 — 20:00</span> середа
+                </li>
+                <li class="footer__item">
+                  <span class="footer__span-desc">12:00 — 20:00</span> четвер
+                </li>
+                <li class="footer__item">
+                  <span class="footer__span-desc">12:00 — 20:00</span> п’ятниця
+                </li>
+                <li class="footer__item">
+                  <span class="footer__span-desc">11:00 — 19:00</span> субота
+                </li>
+                <li class="footer__item">
+                  <span class="footer__span-desc">11:00 — 19:00</span> неділя
+                </li>
+              </ul>
+              <p class="footer__text-desc">
+                <span class="footer__span-desc">Вихідні: </span>понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+            <div class="footer__contacts" id="address">
+              <p class="footer__text">Контакти:</p>
+              <p class="footer__address">
+                <a
+                  class="footer__contact-link footer__contact-adress"
+                  href="https://maps.app.goo.gl/fsDnWDbVaBExKRRq8"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a class="footer__contact-link footer__contact-phone" href="tel:+380442781357">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a class="footer__contact-link footer__contact-fax" href="fax:+380442787454">
+                  факс +38 (044) 278-74-54
+                </a>
+                <a class="footer__contact-link footer__contact-mail" href="mailto:info@namu.kiev.ua">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </p>
+            </div>
+            <button class="footer__btn">
+              <a class="footer__anchor" href="#top"></a>
+            </button>
+          </div>
+
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__link" href="#gallery">Галерея</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#socials">Про Нас</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#events">Виставки та події</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#address">Контакти</a>
+            </li>
+          </ul>
+          <div class="footer__copyright">
+            <p class="footer__author">Designed by Zhyriada Marina</p>
+            <p class="footer__copy">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
