--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,49 @@
 <!doctype html>
-<html lang="en">
+<html lang="ua" class="page">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>НАМУ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600;700&family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="../src/images/icons/logo.svg">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__img"></div>
+
+      <div class="header__top">
+        <a class="header__menu-icon menu-icon" href="#"></a>
+        <a class="header__logo" href="#">
+          <img
+            class="logo"
+            src="../src/images/icons/logo.svg"
+            alt="NA MU logo"
+          >
+        </a>
+      </div>
+
+      <div class="header__content">
+        <h1 class="header__title">Художній музей</h1>
+        <div class="header__search search">
+          <input
+            class="search__input"
+            type="text"
+            placeholder="Квитки"
+          >
+          <div class="search__button"></div>
+        </div>
+      </div>
+    </header>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
