added edits to the header, subscribe, gallery and footer sections

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
       <header class="header" id="top">
         <a class="icon icon--burger" href="#menu"></a>
         <div class="header__top">
-          <a class="header__logo-link" href="https://namu.ua/">
+          <a class="header__logo-link"
+            href="https://namu.ua/"
+            target="_blank">
             <img
               class="logo"
               src="./images/icons/logo.svg"
@@ -210,7 +212,7 @@
               placeholder="E-mail"
               autocomplete="off"
             >
-            <button class="subscribe__button"></button>
+            <button class="subscribe__button" type="button"></button>
           </form>
         </div>
       </section>
@@ -220,7 +222,9 @@
       <div class="container">
         <div class="footer__content" id="socials">
           <div class="footer__icons">
-            <a class="footer__logo-link" href="https://namu.ua/">
+            <a class="footer__logo-link"
+              href="https://namu.ua/"
+              target="_blank">
               <img
                 class="logo"
                 src="./images/icons/logo.svg"
