added edits to the subscribe section

--- a/src/index.html
+++ b/src/index.html
@@ -211,8 +211,10 @@
               type="email"
               placeholder="E-mail"
               autocomplete="off"
+              required
             >
-            <button class="subscribe__button" type="button"></button>
+            <button class="subscribe__button" type="reset">
+            </button>
           </form>
         </div>
       </section>
