added edits to the subscribe section & js file

--- a/src/index.html
+++ b/src/index.html
@@ -213,7 +213,7 @@
               autocomplete="off"
               required
             >
-            <button class="subscribe__button" type="reset">
+            <button class="subscribe__button" type="submit">
             </button>
           </form>
         </div>
