--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,349 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" class="page">
   <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NAMU</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="shortcut icon"
+      href="./images/logo/logo.svg"
+      type="image/x-icon"
+    >
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
-    />
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <!-- #endregion -->
+  <body class="page__body">
+    <header class="header" id="header">
+      <div class="header__top header__top--mobile">
+        <div class="container">
+          <div class="header__museum">
+            <a href="#menu" class="icon icon--hide icon--menu"></a>
+            <a href="#" class="logo logo--header">
+              <img src="./images/logo/logo.svg" alt="NAMU-logo">
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="container container--header">
+        <div class="header__grid">
+          <div class="header__top">
+            <div class="header__museum">
+              <a href="#menu" class="icon icon--hide icon--menu"></a>
+              <a href="#" class="logo logo--header">
+                <img src="./images/logo/logo.svg" alt="NAMU-logo">
+              </a>
+            </div>
+          </div>
+          <div class="header__bottom">
+            <a href="#menu" class="icon icon--show icon--menu"></a>
+            <h1 class="title title--header">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <a href="#actual-news" class="header__link">
+              <div class="header__link header__link--left">КВИТКИ</div>
+              <div class="header__link header__link--right">
+                <div class="icon icon--arrow"></div>
+              </div>
+            </a>
+            <a href="#actual-news" class="header__action-link">Події</a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__green">
+        <div class="container">
+          <div class="menu__relative">
+            <div class="menu__top">
+              <a href="#" class="icon icon--close"></a>
+              <nav class="nav nav--top">
+                <ul class="nav__list nav__list--aside">
+                  <li class="nav__item">
+                    <a
+                      id="link"
+                      href="#swiper"
+                      class="nav__link nav__link--aside"
+                    >Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#form" class="nav__link nav__link--aside">Про Нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#actual-news" class="nav__link nav__link--aside nav__link--width">Виставки та події</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contacts" class="nav__link nav__link--aside">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="info menu__bottom">
+              <div class="info__top">
+                <p class="info__text info__text--mt-and-mb">Графік роботи</p>
+                <div class="info__schedule">
+                  <p class="info__text"><span class="info__white">12:00 — 20:00</span> середа</p>
+                  <p class="info__text"><span class="info__white">12:00 — 20:00</span> четвер</p>
+                  <p class="info__text"><span class="info__white">12:00 — 20:00</span> п'ятниця</p>
+                  <p class="info__text"><span class="info__white">12:00 — 19:00</span> субота</p>
+                  <p class="info__text"><span class="info__white">11:00 — 19:00</span> неділя</p>
+                </div>
+              </div>
+
+              <div class="info__botton">
+                <p class="info__text"><span class="info__white">Вихідні:</span> понеділок, вівторок</p>
+                <p class="info__text">Каса припиняє роботу за 1 годину до закриття музею</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main page__main">
+      <section class="actual-news" id="actual-news">
+        <div class="container">
+          <div class="actual-news__content">
+            <h2 class=
+              "title
+              title--main
+              actual-news__title"
+            >Актуальні події</h2>
+            <article class="article">
+              <img
+                src="./images/main/photo-1.svg"
+                alt="I go and come back photo"
+                class="article__img"
+              >
+              <div class="article__info">
+                <div class="date">
+                  <p class="date__exhibition">ВИСТАВКА</p>
+                  <p class="date__full-date">26.08-29.11.2019</p>
+                </div>
+                <div class="article__relative">
+                  <h3 class="title title--article">Йду і повертаюсь</h3>
+                </div>
+                <p class="article__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </article>
+            <article class="article">
+              <img
+                src="./images/main/photo-2.svg"
+                alt="And memories and dreams photo"
+                class="article__img"
+              >
+              <div class="article__info article__info--bottom">
+                <div class="date">
+                  <p class="date__exhibition">ВИСТАВКА</p>
+                  <p class="date__full-date">26.08-29.11.2019</p>
+                </div>
+                <div class="article__relative">
+                  <h3 class="title title--article">І спогади і мрії</h3>
+                </div>
+                <p class="article__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="lection page__lection">
+        <div class="lection__background">
+          <div class="lection__info">
+            <div class="date date--padding">
+              <p class="date__exhibition">ЛЕКЦІЯ</p>
+              <p class="date__full-date date__full-date--width">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="title title--lection">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__swiper" id="swiper">
+        <div class="container">
+          <h2 class="title title--main">Галерея</h2>
+        </div>
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./images/swiper/swiper-1.svg" alt="Photo swiper">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/swiper/swiper-2.svg" alt="Photo swiper">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/swiper/swiper-3.svg" alt="Photo swiper">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/swiper/swiper-4.svg" alt="Photo swiper">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/swiper/swiper-5.svg" alt="Photo swiper">
+            </div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </section>
+
+      <div class="gallery" id="gallery">
+        <div class="container">
+          <h2 class=
+            "title
+            title--main
+            galley__title"
+          >Галерея</h2>
+          <div class="gallery__content">
+            <img
+              src="./images/swiper/swiper-1.svg"
+              alt="photo-1"
+              class="gallery__img gallery__img--1"
+            >
+            <img
+              src="./images/swiper/swiper-3.svg"
+              alt="photo-2"
+              class="gallery__img gallery__img--2"
+            >
+            <img
+              src="./images/swiper/swiper-4.svg"
+              alt="photo-3"
+              class="gallery__img gallery__img--3"
+            >
+            <img
+              src="./images/swiper/swiper-5.svg"
+              alt="photo-4"
+              class="gallery__img gallery__img--4"
+            >
+          </div>
+        </div>
+      </div>
+
+      <section class="subscription">
+        <div class="container">
+          <div class="subscription__info">
+            <h2 class="title title--sunscription">Підписка</h2>
+            <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          </div>
+          <div class="subscription__center">
+            <form
+              id="form"
+              action="#"
+              method="post"
+              class="subscription__form"
+              onsubmit="this.reset(); return false;"
+            >
+              <input
+                type="email"
+                name="E-mail"
+                class="subscription__input"
+                placeholder="E-mail"
+                required
+              >
+              <button type="submit" class="subscription__button">
+                <div class="icon icon--arrow"></div>
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <a href="#" class="logo">
+              <img src="./images/logo/logo.svg" alt="NAMU-logo">
+            </a>
+            <div class="footer__icons">
+              <a
+                href="https://www.facebook.com/?locale=uk_UA"
+                class="icon icon--facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/?locale=uk_UA"
+                class="icon icon--instagram"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+          <div class="info footer__info">
+            <p class="info__text info__text--footer">Графік роботи</p>
+
+            <div class="info__schedule info__schedule--footer">
+              <p class="info__text"><span class="info__white">12:00 — 20:00</span> середа</p>
+              <p class="info__text"><span class="info__white">12:00 — 20:00</span> четвер</p>
+              <p class="info__text"><span class="info__white">12:00 — 20:00</span> п'ятниця</p>
+              <p class="info__text"><span class="info__white">12:00 — 19:00</span> субота</p>
+              <p class="info__text"><span class="info__white">11:00 — 19:00</span> неділя</p>
+            </div>
+
+            <p class="info__text"><span class="info__white">Вихідні:</span> понеділок, вівторок</p>
+            <p class="info__text">Каса припиняє роботу за 1 годину до закриття музею</p>
+          </div>
+          <div class="footer__contacts">
+            <p class="footer__text">Контакти:</p>
+            <div class="footer__details">
+              <a
+                href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
+                class="footer__link"
+                target="_blank"
+              >вул. М. Грушевського, 6; Київ, 01001</a>
+              <a href="tel:+380442781357" class="footer__link">тел. +38 (044) 278-13-57</a>
+              <a href="fax:+380442787454" class="footer__link">факс +38 (044) 278-74-54</a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__link">e-mail: info@namu.kiev.ua</a>
+            </div>
+          </div>
+          <div class="footer__up">
+            <a href="#header" class="icon icon--footer"></a>
+          </div>
+          <div class="footer__line"></div>
+          <nav class="nav footer__inside-nav">
+            <ul class="nav__list nav__list--flex">
+              <li class="nav__item">
+                <a href="#swiper" class="nav__link  nav__link--footer">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a href="#form" class="nav__link  nav__link--footer">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a href="#actual-news" class="nav__link  nav__link--footer">Виставки та події</a>
+              </li>
+              <li class="nav__item ">
+                <a href="#contacts" class="nav__link nav__link--footer">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <nav class="nav footer__before nav__footer">
+          <ul class="nav__list footer__nav">
+            <li class="nav__item nav__item--left">
+              <a href="#swiper" class="nav__link  nav__link--footer">Галерея</a>
+            </li>
+            <li class="nav__item nav__item--right">
+              <a href="#" class="nav__link  nav__link--footer">Про Нас</a>
+            </li>
+            <li class="nav__item nav__item--left">
+              <a href="#actual-news" class="nav__link  nav__link--footer">Виставки та події</a>
+            </li>
+            <li class="nav__item nav__item--right">
+              <a href="#contacts" class="nav__link nav__link--footer">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__copyright">
+          <p>Designed by Zhyriada Marina</p>
+          <p>Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
