--- a/src/index.html
+++ b/src/index.html
@@ -19,30 +19,75 @@
   <body>
     <header class="header">
       <div class="header__img"></div>
-
-      <div class="header__top">
-        <a class="header__menu-icon menu-icon" href="#"></a>
-        <a class="header__logo" href="#">
-          <img
-            class="logo"
-            src="../src/images/icons/logo.svg"
-            alt="NA MU logo"
-          >
+      <div class=" header__content container">
+        <div class="header__top">
+          <a class="header__menu-icon menu-icon" href="#"></a>
+          <a class="header__logo" href="#">
+            <img
+              class="logo"
+              src="../src/images/icons/logo.svg"
+              alt="NA MU logo"
+            >
+          </a>
+        </div>
+        <div class="header__inform">
+          <h1 class="header__title">Художній<br> музей</h1>
+          <a class="header__tickets tickets">
+            <div class="tickets__title">Квитки</div>
+            <div class="tickets__button"></div>
+          </a>
+        </div>
+        <a class="header__events events-link">
+          <div class="events-link__line"></div>
+          <h4 class="events-link__title event-type-title">Події</h4>
         </a>
       </div>
-
-      <div class="header__content">
-        <h1 class="header__title">Художній музей</h1>
-        <div class="header__search search">
-          <input
-            class="search__input"
-            type="text"
-            placeholder="Квитки"
-          >
-          <div class="search__button"></div>
-        </div>
-      </div>
     </header>
+
+    <main class="main">
+      <section class="events">
+        <div class="events__content container">
+          <h2 class="events__title section-title">Актуальні події</h2>
+          <div class="events__items">
+            <div class="events__item event">
+              <img
+              class="event__img"
+              src="../src/images/events/event-1.svg"
+              alt="Museum event 1"
+            >
+              <div class="event__text-block">
+                <div class="event__type">
+                  <h4 class="event__type-title event-type-title">ВИСТАВКА</h4>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="event__title events-title">Йду і повертаюсь</h3>
+                <p class="event__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <div class="events__item event">
+              <img
+                class="event__img"
+                src="../src/images/events/event-2.svg"
+                alt="Museum event 2"
+              >
+              <div class="event__text-block">
+                <div class="event__type">
+                  <h4 class="event__type-title event-type-title">ВИСТАВКА</h4>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="event__title events-title">І спогади і мрії</h3>
+                <p class="event__description">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <script src="scripts/main.js"></script>
   </body>
