--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
           <h1 class="header__title">Художній<br> музей</h1>
           <a class="header__tickets tickets">
             <div class="tickets__title">Квитки</div>
-            <div class="tickets__button"></div>
+            <div class="button"></div>
           </a>
         </div>
         <a class="header__events events-link">
@@ -49,25 +49,28 @@
         <div class="events__content container">
           <h2 class="events__title section-title">Актуальні події</h2>
           <div class="events__items">
-            <div class="events__item event">
+            <article class="events__item event">
               <img
-              class="event__img"
-              src="../src/images/events/event-1.svg"
-              alt="Museum event 1"
-            >
+                class="event__img"
+                src="../src/images/events/event-1.svg"
+                alt="Museum event 1"
+              >
               <div class="event__text-block">
                 <div class="event__type">
-                  <h4 class="event__type-title event-type-title">ВИСТАВКА</h4>
+                  <h4 class="event__type-title event-type-title">Виставка</h4>
                   <p class="event__date">26.08-29.11.2019</p>
                 </div>
-                <h3 class="event__title events-title">Йду і повертаюсь</h3>
+                <div class="event__title">
+                  <h3 class="events-title">Йду і повертаюсь</h3>
+                  <span class="stylistic-square"></span>
+                </div>
                 <p class="event__description">
                   Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
                 </p>
               </div>
-            </div>
+            </article>
 
-            <div class="events__item event">
+            <article class="events__item event">
               <img
                 class="event__img"
                 src="../src/images/events/event-2.svg"
@@ -75,20 +78,56 @@
               >
               <div class="event__text-block">
                 <div class="event__type">
-                  <h4 class="event__type-title event-type-title">ВИСТАВКА</h4>
+                  <h4 class="event__type-title event-type-title">Виставка</h4>
                   <p class="event__date">26.08-29.11.2019</p>
                 </div>
-                <h3 class="event__title events-title">І спогади і мрії</h3>
+                <div class="event__title">
+                  <h3 class="events-title">І спогади і мрії</h3>
+                  <span class="stylistic-square"></span>
+                </div>
                 <p class="event__description">
                   Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
                 </p>
               </div>
-            </div>
+            </article>
           </div>
+        </div>
+      </section>
+
+      <section class="lecture">
+        <div class="lecture__content">
+          <img
+            class="lecture__img"
+            src="../src/images/lecture/lecture.svg"
+            alt="Lecture backgraund"
+          >
+          <article class="lecture__text-block">
+            <div class="lecture__footer">
+              <h4 class="lecture__event-title event-type-title">Лекція</h4>
+              <p class="event__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="events-title">Від класицизму до романтизму</h3>
+          </article>
         </div>
       </section>
     </main>
 
+    <section class="subscription">
+      <div class="subscription__wrapper">
+        <div class="subscription__content container">
+          <h2 class="subscription__title section-title">Підписка</h2>
+          <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <div class="subscription__field">
+            <input
+              class="subscription__input"
+              type="text"
+              placeholder="E-mail"
+            >
+            <button class="button button--subscription"></button>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="scripts/main.js"></script>
   </body>
 </html>
