fixed form and add favicon

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
+    <link
+      rel="shortcut icon"
+      href="./images/favicon.png"
+      type="image/x-icon"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -180,6 +185,7 @@
               action="URL"
               class="subscribe__form"
               autocomplete="off"
+              onsubmit="this.reset(); return false;"
             >
               <input
                 class="subscribe__input"
