--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
       <div class=" header__content container">
         <div class="header__top">
           <a class="header__menu-icon menu-icon" href="#"></a>
-          <a class="header__logo" href="#">
+          <a class="header__logo logo" href="#">
             <img
-              class="logo"
+              class="logo__img"
               src="../src/images/icons/logo.svg"
               alt="NA MU logo"
             >
@@ -39,7 +39,7 @@
         </div>
         <a class="header__events events-link">
           <div class="events-link__line"></div>
-          <h4 class="events-link__title event-type-title">Події</h4>
+          <h4 class="event-type-title event-type-title--header">Події</h4>
         </a>
       </div>
     </header>
@@ -110,24 +110,99 @@
           </article>
         </div>
       </section>
-    </main>
 
-    <section class="subscription">
-      <div class="subscription__wrapper">
-        <div class="subscription__content container">
-          <h2 class="subscription__title section-title">Підписка</h2>
-          <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
-          <div class="subscription__field">
-            <input
-              class="subscription__input"
-              type="text"
-              placeholder="E-mail"
-            >
-            <button class="button button--subscription"></button>
+      <section class="subscription">
+        <div class="subscription__wrapper">
+          <div class="subscription__content container">
+            <h2 class="subscription__title section-title">Підписка</h2>
+            <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <div class="subscription__field">
+              <input
+                class="subscription__input"
+                type="text"
+                placeholder="E-mail"
+              >
+              <button class="button button--black"></button>
+            </div>
           </div>
         </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <section class="footer__icons icons">
+            <a class="icons__logo logo" href="#">
+              <img
+                class="logo__img"
+                src="../src/images/icons/logo.svg"
+                alt="NA MU logo"
+              >
+            </a>
+            <div class="icons__social">
+              <a class="social-icon" href="#">
+                <img
+                  class="icons__img"
+                  src="../src/images/icons/facebook.svg"
+                  alt="NA MU logo"
+                >
+              </a>
+              <a class="social-icon" href="#">
+                <img
+                  class="icons__img"
+                  src="../src/images/icons/instagram.svg"
+                  alt="NA MU logo"
+                >
+              </a>
+            </div>
+          </section>
+          <section class="footer__schedule schedule-address">
+            <p class="schedule-address__title">Графік роботи</p>
+            <p class="schedule-address__description">
+              <strong>12:00 — 20:00</strong> середа<br>
+              <strong>12:00 — 20:00</strong>  четвер<br>
+              <strong>12:00 — 20:00</strong> п’ятниця<br>
+              <strong>11:00 — 19:00</strong> субота<br>
+              <strong>11:00 — 19:00</strong> неділя<br><br>
+              Вихідні понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину<br> до закриття музею
+            </p>
+          </section>
+          <section class="footer__address schedule-address">
+            <p class="schedule-address__title">Контакти:</p>
+            <p class="schedule-address__description">
+              вул. М. Грушевського, 6; Київ, 01001<br>
+              тел. +38 (044) 278-13-57<br>
+              факс +38 (044) 278-74-54<br>
+              e-mail: info@namu.kiev.ua<br>
+            </p>
+          </section>
+          <div class="footer__stylistic-line stylistic-line"></div>
+          <nav class="footer__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__designed-by designed-by">
+          <p class="designed-by__item">Copyright © 2019. All Rights Reserved.</p>
+          <p class="designed-by__item">Designed by Zhyriada Marina</p>
+        </div>
       </div>
-    </section>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
