add gallery, menu

--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
       href="./styles/main.scss"
     />
   </head>
-  <body>
+  <body class="page__body">
     <header class="header">
       <div class="header__img"></div>
       <div class=" header__content container">
         <div class="header__top">
-          <a class="header__menu-icon menu-icon" href="#"></a>
+          <a class="header__menu-icon menu-icon" href="#menu"></a>
           <a class="header__logo logo" href="#">
             <img
               class="logo__img"
@@ -43,6 +43,49 @@
         </a>
       </div>
     </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="menu__content container">
+          <div class="menu__nav-wrapp">
+            <a class="close-icon" href="#"></a>
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link nav__link--menu" href="#">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link nav__link--menu" href="#">Про Нас</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link nav__link--menu" href="#">Виставки та події</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link nav__link--menu" href="#">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="menu__stylistic-line stylistic-line"></div>
+          <section class="menu__schedule schedule-address">
+            <p class="schedule-address__title">Графік роботи</p>
+            <div class="schedule-address__wrapper">
+              <p class="schedule-address__description">
+                <strong>12:00 — 20:00</strong> середа<br>
+                <strong>12:00 — 20:00</strong>  четвер<br>
+                <strong>12:00 — 20:00</strong> п’ятниця<br>
+                <strong>11:00 — 19:00</strong> субота<br>
+                <strong>11:00 — 19:00</strong> неділя<br>
+              </p>
+              <p class="schedule-address__description">
+                <strong>Вихідні:</strong> понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </section>
+        </div>
+      </div>
+    </aside>
 
     <main class="main">
       <section class="events">
@@ -108,6 +151,67 @@
             </div>
             <h3 class="events-title">Від класицизму до романтизму</h3>
           </article>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <div class="gallery__content container">
+          <h2 class="gallery__title section-title">Галерея</h2>
+
+          <div class="gallery-descktop">
+            <ul class="gallery-descktop__list">
+              <li class="gallery-descktop__item gallery-descktop__item--1">
+                <img
+                  class="gallery-descktop__img"
+                  src="../src/images/gallery/gallery-img-1.jpg"
+                  alt="gallery img 1"
+                >
+              </li>
+              <li class="gallery-descktop__item gallery-descktop__item--2">
+                <img
+                  class="gallery-descktop__img"
+                  src="../src/images/gallery/gallery-img-2.jpg"
+                  alt="gallery img 2"
+                >
+              </li>
+              <li class="gallery-descktop__item gallery-descktop__item--3">
+                <img
+                  class="gallery-descktop__img"
+                  src="../src/images/gallery/gallery-img-3.jpg"
+                  alt="gallery img 3"
+                >
+              </li>
+              <li class="gallery-descktop__item gallery-descktop__item--4">
+                <img
+                  class="gallery-descktop__img"
+                  src="../src/images/gallery/gallery-img-4.jpg"
+                  alt="gallery img 4"
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="gallery-mobile">
+            <div class="gallery-mobile__images">
+              <img
+                class="gallery-mobile__image"
+                src="../src/images/gallery/gallery-img-1-mobile.svg"
+                alt="gallery image 1"
+              >
+              <img
+                class="gallery-mobile__image"
+                src="../src/images/gallery/gallery-img-2-mobile.svg"
+                alt="gallery image 2"
+              >
+            </div>
+            <div class="gallery-mobile__nav">
+              <a class="gallery-mobile__point"></a>
+              <a class="gallery-mobile__point"></a>
+              <a class="gallery-mobile__point"></a>
+              <a class="gallery-mobile__point"></a>
+            </div>
+          </div>
+
         </div>
       </section>
 
@@ -177,8 +281,14 @@
               факс +38 (044) 278-74-54<br>
               e-mail: info@namu.kiev.ua<br>
             </p>
+
+            <a class="footer__arrow-up" href="#">
+              <div class="arrow-up"></div>
+            </a>
           </section>
+
           <div class="footer__stylistic-line stylistic-line"></div>
+
           <nav class="footer__nav nav">
             <ul class="nav__list">
               <li class="nav__item">
