fixed the form, link and gallery

--- a/src/index.html
+++ b/src/index.html
@@ -205,6 +205,11 @@
                 src="../src/images/gallery/gallery-img-2-mobile.svg"
                 alt="gallery image 2"
               >
+              <img
+                class="gallery-mobile__image"
+                src="../src/images/gallery/gallery-img-3-mobile.svg"
+                alt="gallery image 3"
+              >
             </div>
             <div class="gallery-mobile__nav">
               <a class="gallery-mobile__point"></a>
@@ -227,7 +232,8 @@
               class="subscription__form"
               action="http://localhost:3000/api"
               method="post"
-              name="contact-form"
+              name="contact-form
+              required"
               onsubmit="this.reset(); return false;"
             >
               <input
@@ -294,7 +300,7 @@
           <section class="footer__address schedule-address">
             <p class="schedule-address__title schedule-address__title--footer">Контакти:</p>
             <a
-              class="schedule-address__description schedule-address__description--footer"
+              class="schedule-address__description schedule-address__description--footer schedule-address__description--addess"
               href="https://maps.app.goo.gl/mKxTM57ZRfjk1rxFA"
               target="_blank"
             >
