fixed the form, link and gallery

--- a/src/index.html
+++ b/src/index.html
@@ -232,14 +232,14 @@
               class="subscription__form"
               action="http://localhost:3000/api"
               method="post"
-              name="contact-form
-              required"
+              name="contact-form"
               onsubmit="this.reset(); return false;"
             >
               <input
                 class="subscription__input"
                 type="email"
                 placeholder="E-mail"
+                required
               >
               <button class="button button--black"></button>
             </form>
@@ -299,16 +299,18 @@
           </section>
           <section class="footer__address schedule-address">
             <p class="schedule-address__title schedule-address__title--footer">Контакти:</p>
-            <a
-              class="schedule-address__description schedule-address__description--footer schedule-address__description--addess"
-              href="https://maps.app.goo.gl/mKxTM57ZRfjk1rxFA"
-              target="_blank"
-            >
-              вул. М. Грушевського, 6; Київ, 01001<br>
-              тел. +38 (044) 278-13-57<br>
-              факс +38 (044) 278-74-54<br>
-              e-mail: info@namu.kiev.ua<br>
-            </a>
+            <div class="schedule-address__description schedule-address__description--footer">
+              <a
+                class="schedule-address__link"
+                href="https://maps.app.goo.gl/mKxTM57ZRfjk1rxFA"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              тел. <a class="schedule-address__link" href="tel:+38 (044) 278-13-57">+38 (044) 278-13-57</a><br>
+              факс <a class="schedule-address__link" href="tel:+38 (044) 278-74-54">+38 (044) 278-74-54</a><br>
+              e-mail: <a class="schedule-address__link" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+            </div>
 
             <a class="footer__arrow-up" href="#">
               <div class="arrow-up"></div>
