LandingMuseum fix and changing size

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      href="./images/NA_MU_logo.png"
+      type="image/x-icon"
+    >
 
     <link
       rel="stylesheet"
@@ -325,8 +330,16 @@
           </p>
         </div>
       </div>
+      <a class="footer__arrow" href="#">
+        <img
+          class="footer__arrow-up"
+          src="./images/Arrow up.png"
+          alt="arrow"
+        >
+      </a>
+      <div class="footer__line">
 
-      <div class="footer__line"></div>
+      </div>
 
       <nav class="footer__nav">
         <ul class="footer__list">
