--- a/src/index.html
+++ b/src/index.html
@@ -260,10 +260,9 @@
               </div>
 
               <div class="subscribe__bar--small-bar--button">
-                <input
+                <button
                   type="submit"
-                  value=" "
-                  class="subscribe__bar--small-bar--button--in">
+                  class="subscribe__bar--small-bar--button--in"></button>
               </div>
             </form>
           </div>
@@ -337,9 +336,7 @@
           alt="arrow"
         >
       </a>
-      <div class="footer__line">
-
-      </div>
+      <div class="footer__line"></div>
 
       <nav class="footer__nav">
         <ul class="footer__list">
