--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
   </head>
   <body class="page__body">
     <header class="header" id="header">
@@ -32,65 +34,65 @@
         <h1 class="header__main-title">ХУДОЖНІЙ МУЗЕЙ</h1>
         <a href="#actual" class="header__tickets-link">КВИТКИ</a>
       </div>
+      <div class="vertical">
+        <div class="vertical__line"></div>
+        <p class="vertical__text"> ПОДІЇ </p>
+      </div>
       <a href="#menu" class="header__burger-menu"></a>
-
-
     </header>
 
     <aside class="aside" id="menu">
       <div class="aside__content">
         <div class="aside__top">
           <a href="#close" class="aside__close-icon aside__text"></a>
-        </div>
-        <div>
-          <div class="aside__gallery">
-            <a href="#gallery" class="aside__titles">Галерея</a>
-          </div>
-          <div class="aside__actual">
-            <a href="#actual" class="aside__titles">Виставка та події</a>
-          </div>
-        </div>
-        <div>
-          <div class="aside__about-us">
-            <a href="#about-us" class="aside__titles">Про Нас</a>
-          </div>
-          <div class="aside__contacts">
-            <a href="#contacts" class="aside__titles">Контакти</a>
+          <div class="aside__menu">
+            <div class="aside__gallery">
+              <a href="#gallery" class="aside__titles">Галерея</a>
+            </div>
+            <div class="aside__about-us">
+              <a href="#about-us" class="aside__titles">Про Нас</a>
+            </div>
+            <div class="aside__actual">
+              <a href="#actual" class="aside__titles">Виставка та події</a>
+            </div>
+            <div class="aside__contacts">
+              <a href="#contacts" class="aside__titles">Контакти</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="aside__line"></div>
-      <div class="aside__work">
-        <p class="aside__text aside__title">Графік роботи</p>
-        <ul class="aside__days">
-          <li class="aside__text">
-            <span class="aside__time">12:00 — 20:00</span>
-            середа
-          </li>
-          <li class="aside__text">
-            <span class="aside__time">12:00 — 20:00</span>
-              четвер
-          </li>
-          <li class="aside__text">
-            <span class="aside__time">12:00 — 20:00</span>
-            п’ятниця
-          </li>
-          <li class="aside__text">
-            <span class="aside__time">11:00 — 19:00</span>
-            субота
-          </li>
-          <li class="aside__text">
-            <span class="aside__time">11:00 — 19:00</span>
-            неділя
-          </li>
-        </ul>
-      </div>
-      <p class="aside__p aside__text">
-        <span class="aside__time">Вихідні:</span>
-          понеділок, вівторок
-        <br>Kaca припиняє роботу за 1 годину до закриття музею
-      </p>
+        <div class="aside__line"></div>
 
+        <div class="aside__work">
+          <p class="aside__text aside__title">Графік роботи</p>
+          <ul class="aside__days">
+            <li class="aside__text">
+              <span class="aside__time">12:00 — 20:00</span>
+              середа
+            </li>
+            <li class="aside__text">
+              <span class="aside__time">12:00 — 20:00</span>
+                четвер
+            </li>
+            <li class="aside__text">
+              <span class="aside__time">12:00 — 20:00</span>
+              п’ятниця
+            </li>
+            <li class="aside__text">
+              <span class="aside__time">11:00 — 19:00</span>
+              субота
+            </li>
+            <li class="aside__text">
+              <span class="aside__time">11:00 — 19:00</span>
+              неділя
+            </li>
+          </ul>
+        </div>
+        <p class="aside__p aside__text">
+          <span class="aside__time">Вихідні:</span>
+            понеділок, вівторок
+          <br>Kaca припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
     </aside>
 
     <main class="main">
@@ -156,27 +158,52 @@
         <div class="gallery__title-wraper">
           <h3 class="gallery__tittle"> Галерея </h3>
         </div>
-        <div class="gallery__picture-wrapper1">
-          <img src="./images/gallery1.svg" alt="gallery__NAMU"
-          class="gallery__picture-1 main__picture">
+
+        <div class="slider-wrapper">
+          <div class="swiper swiper-initialized swiper-horizontal swiper-free-mode swiper-backface-hidden">
+            <div class="swiper-wrapper" id="swiper-wrapper">
+              <div class="swiper-slide swiper-slide1"></div>
+              <div class="swiper-slide swiper-slide3"></div>
+              <div class="swiper-slide swiper-slide4"></div>
+              <div class="swiper-slide swiper-slide5"></div>
+            </div>
+
+            <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
+              <!-- <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span>
+              <span
+                class="swiper-pagination-bullet"
+                tabindex="0"
+                role="button"
+                aria-label="Go to slide 2"
+                ></span>
+              <span
+                  class="swiper-pagination-bullet"
+                  tabindex="0"
+                  role="button"
+                  aria-label="Go to slide 3"
+                ></span>
+              <span
+                  class="swiper-pagination-bullet"
+                  tabindex="0"
+                  role="button"
+                  aria-label="Go to slide 4"
+                ></span> -->
+            </div>
+          </div>
+
+          <span
+              class="swiper-notification"
+              aria-live="assertive"
+              aria-atomic="true"
+            ></span>
         </div>
-        <div class="gallery__picture-wrapper2">
-          <img src="./images/gallery2.svg" alt="gallery__NAMU"
-          class="gallery__picture-2 main__picture">
+
+        <div class="gallery__photos">
+          <div class="gallery__photo gallery__picture-wrapper1"></div>
+          <div class="gallery__photo gallery__picture-wrapper3"></div>
+          <div class="gallery__photo gallery__picture-wrapper4"></div>
+          <div class="gallery__photo gallery__picture-wrapper5"></div>
         </div>
-        <div class="gallery__picture-wrapper3">
-          <img src="./images/gallery3.svg" alt="gallery__NAMU"
-          class="gallery__picture-3 main__picture">
-        </div>
-        <div class="gallery__picture-wrapper4">
-          <img src="./images/gallery4.svg" alt="gallery__NAMU"
-          class="gallery__picture-4 main__picture">
-        </div>
-        <div class="gallery__picture-wrapper5">
-          <img src="./images/gallery5.svg" alt="gallery__NAMU"
-          class="gallery__picture-5 main__picture">
-        </div>
-        <div class="gallery__dot-group"></div>
       </section>
 
       <section class="subscription">
@@ -246,7 +273,7 @@
             </li>
             <li class="schedule__day--p">
               <span class="schedule__day"> Вихідні</span>
-              Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
             </li>
           </ul>
         </div>
@@ -280,8 +307,8 @@
         </div>
         <div class="schedule__line"></div>
         <a href="#gallery" class="schedule__gallery schedule__href schedule__link">Галерея</a>
-        <a href="#relevant" class="schedule__about-us schedule__href schedule__link">Виставки та події</a>
-        <a href="#subscription" class="schedule__events schedule__href schedule__link">Про Нас</a>
+        <a href="#relevant" class="schedule__about-us schedule__href schedule__link">Про Нас</a>
+        <a href="#subscription" class="schedule__events schedule__href schedule__link">Виставки та події</a>
         <a href="#footer" class="schedule__contact schedule__href schedule__link">Контакти</a>
       </section>
     </main>
@@ -292,5 +319,30 @@
 
 
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="module">
+      import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
+      const swiper = new Swiper('.swiper', {
+        speed: 400,
+        spaceBetween: 100,
+        pagination: {
+          el: '.swiper-pagination',
+          type: 'bullets',
+        },
+        direction: 'horizontal',
+
+        loop: true,
+        breakpoints: {
+          320: {
+            slidesPerView: 1,
+          },
+
+          768: {
+            slidesPerView: 2,
+          },
+        },
+        slidesPerView: 2.1,
+        spaceBetween: 20,
+      })
+    </script>
   </body>
 </html>
