implement header section

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,125 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Title</title>
+    <link rel="icon" href="./images/favicon-32x32.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__bg"></div>
+      <div class="container">
+        <div class="top-bar header__top-bar">
+          <a href="#menu" class="icon icon--menu"></a>
+
+          <a href="#" class="top-bar__link">
+            <img
+              src="./images/icons/logo.svg"
+              alt="Namu logo"
+              class="top-bar__img"
+            >
+          </a>
+        </div>
+
+        <div class="header__content">
+          <h1 class="header__title">
+            ХУДОЖНІЙ МУЗЕЙ
+          </h1>
+
+          <a href="#" class="btn header__btn">
+            КВИТКИ
+          </a>
+
+          <a href="#" class="header__category">
+            ПОДІЇ
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="icon icon--close menu__icon"></a>
+
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="schedule menu__schedule">
+            <h4 class="schedule__title">
+              Графік роботи
+            </h4>
+
+            <div class="schedule__content">
+              <ul class="schedule__list">
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">12:00 — 20:00</span> середа
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">12:00 — 20:00</span> четвер
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">12:00 — 20:00</span> п’ятниця
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">11:00 — 19:00</span> субота
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">11:00 — 19:00</span> неділя
+                </li>
+              </ul>
+
+              <div class="schedule__weekends">
+                <p>
+                  <span class="schedule__text--bold">Вихідні:</span> понеділок, вівторок
+                </p>
+
+                <p>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="menu__overlay"></div>
+    </aside>
     <script src="scripts/main.js"></script>
   </body>
 </html>
