--- a/src/index.html
+++ b/src/index.html
@@ -155,11 +155,36 @@
 
       </section>
       <section class="gallery" id="gallery">
-        <div class="gallery__title-wraper">
-          <h3 class="gallery__tittle"> Галерея </h3>
-        </div>
 
-        <div class="slider-wrapper">
+        <h3 class="gallery__tittle"> Галерея </h3>
+
+        <div class="gallery__picture-wrapper-1">
+          <img src="./images/gallery1.svg" alt="woman-in-dress-art"
+            class="gallery__photo-1">
+        </div>
+        <div class="gallery__picture-wrapper-2">
+          <img src="./images/gallery2.svg" alt="woman-in-dress-art"
+            class="gallery__photo-2">
+        </div>
+        <div class="gallery__picture-wrapper-3">
+          <img src="./images/gallery3.svg" alt="woman-in-dress-art"
+            class="gallery__photo-3">
+        </div>
+        <div class="gallery__picture-wrapper-4">
+          <img src="./images/gallery4.svg" alt="woman-in-dress-art"
+            class="gallery__photo-4">
+        </div>
+        <div class="gallery__picture-wrapper-5">
+          <img src="./images/gallery5.svg" alt="woman-in-dress-art"
+            class="gallery__photo-3">
+        </div>
+        <div class="gallery__dot-group"></div>
+
+      </section>
+
+
+
+        <!-- <div class="slider-wrapper">
           <div class="swiper swiper-initialized swiper-horizontal swiper-free-mode swiper-backface-hidden">
             <div class="swiper-wrapper" id="swiper-wrapper">
               <div class="swiper-slide swiper-slide1"></div>
@@ -169,7 +194,7 @@
             </div>
 
             <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
-              <!-- <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span>
+              <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span>
               <span
                 class="swiper-pagination-bullet"
                 tabindex="0"
@@ -187,7 +212,7 @@
                   tabindex="0"
                   role="button"
                   aria-label="Go to slide 4"
-                ></span> -->
+                ></span>
             </div>
           </div>
 
@@ -196,15 +221,8 @@
               aria-live="assertive"
               aria-atomic="true"
             ></span>
-        </div>
+        </div> -->
 
-        <div class="gallery__photos">
-          <div class="gallery__photo gallery__picture-wrapper1"></div>
-          <div class="gallery__photo gallery__picture-wrapper3"></div>
-          <div class="gallery__photo gallery__picture-wrapper4"></div>
-          <div class="gallery__photo gallery__picture-wrapper5"></div>
-        </div>
-      </section>
 
       <section class="subscription">
         <div class="subscription__big-content">
@@ -319,7 +337,7 @@
 
 
     <script type="text/javascript" src="scripts/main.js"></script>
-    <script type="module">
+    <!-- <script type="module">
       import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
       const swiper = new Swiper('.swiper', {
         speed: 400,
@@ -343,6 +361,7 @@
         slidesPerView: 2.1,
         spaceBetween: 20,
       })
+    </script> -->
     </script>
   </body>
 </html>
