--- a/src/index.html
+++ b/src/index.html
@@ -96,10 +96,11 @@
     </aside>
 
     <main class="main">
-      <div
-        class="scroll-to-top"
-        id="scroll-to-top"
-      >
+      <!-- <div class="scroll-to-top" id="scrollToTop"></div> -->
+
+      <div class="back-to-top-wrapper">
+        <a href="#top" class="back-to-top-link"
+          aria-label="Scroll to Top"></a>
       </div>
 
       <section class="poster" id="poster">
@@ -187,8 +188,8 @@
           <div class="subscription__content-wrapper">
             <div class="subscription__content">
               <h3 class="subscription__title">Підписка</h3>
-              <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.          </p>
-              <form action="#" method="get"
+              <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+              <form action="#" method="post"
               onsubmit="this.reset(); return false;" class="subscription__form">
                 <input type="email"
                 placeholder="E-mail" required=""
@@ -283,9 +284,9 @@
         </div>
         <div class="schedule__line"></div>
         <a href="#gallery" class="schedule__gallery schedule__href schedule__link">Галерея</a>
-        <a href="#relevant" class="schedule__about-us schedule__href schedule__link">Про Нас</a>
-        <a href="#subscription" class="schedule__events schedule__href schedule__link">Виставки та події</a>
-        <a href="#footer" class="schedule__contact schedule__href schedule__link">Контакти</a>
+        <a href="#header" class="schedule__about-us schedule__href schedule__link">Про Нас</a>
+        <a href="#poster" class="schedule__events schedule__href schedule__link">Виставки та події</a>
+        <a href="#schedule" class="schedule__contact schedule__href schedule__link">Контакти</a>
       </section>
     </main>
     <footer class="footer">
