--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,11 @@
       </div>
 
       <div class="header__title">
-        <h1 class="header__main-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <h1 class="header__main-title">
+          ХУДОЖНІЙ
+          </br>
+            МУЗЕЙ
+        </h1>
         <a href="#actual" class="header__tickets-link">КВИТКИ</a>
       </div>
       <div class="vertical">
@@ -50,13 +54,13 @@
               <a href="#gallery" class="aside__titles">Галерея</a>
             </div>
             <div class="aside__about-us">
-              <a href="#about-us" class="aside__titles">Про Нас</a>
+              <a href="#subscription" class="aside__titles">Про Нас</a>
             </div>
             <div class="aside__actual">
-              <a href="#actual" class="aside__titles">Виставка та події</a>
+              <a href="#poster" class="aside__titles">Виставка та події</a>
             </div>
             <div class="aside__contacts">
-              <a href="#contacts" class="aside__titles">Контакти</a>
+              <a href="#schedule" class="aside__titles">Контакти</a>
             </div>
           </div>
         </div>
@@ -96,7 +100,6 @@
     </aside>
 
     <main class="main">
-      <!-- <div class="scroll-to-top" id="scrollToTop"></div> -->
 
       <div class="back-to-top-wrapper">
         <a href="#top" class="back-to-top-link"
@@ -183,7 +186,7 @@
 
       </section>
 
-      <section class="subscription">
+      <section class="subscription" id="subscription">
         <div class="subscription__big-content">
           <div class="subscription__content-wrapper">
             <div class="subscription__content">
@@ -201,7 +204,7 @@
         </div>
       </section>
 
-      <section class="schedule">
+      <section class="schedule" id="schedule">
         <a href="#">
           <img
             src="./images/namu--logo.svg"
@@ -225,7 +228,7 @@
             <img src="./images/icons/instagram--logo.svg" alt="icon-instagram">
           </a>
         </div>
-        <div class="schedule__work" id="contacts">
+        <div class="schedule__work">
           <p class="schedule__title">Графік роботи</p>
           <ul class="schedule__days">
             <li class="schedule__day">
@@ -284,7 +287,7 @@
         </div>
         <div class="schedule__line"></div>
         <a href="#gallery" class="schedule__gallery schedule__href schedule__link">Галерея</a>
-        <a href="#header" class="schedule__about-us schedule__href schedule__link">Про Нас</a>
+        <a href="#subscription" class="schedule__about-us schedule__href schedule__link">Про Нас</a>
         <a href="#poster" class="schedule__events schedule__href schedule__link">Виставки та події</a>
         <a href="#schedule" class="schedule__contact schedule__href schedule__link">Контакти</a>
       </section>
